// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/forms/JurisdictionSelect renders select options correctly: Jurisdiction Select Props 1`] = `
Object {
  "apiEndpoint": "location/findByProperties",
  "aria-label": "Select",
  "backspaceRemovesValue": true,
  "blurInputOnSelect": true,
  "bsSize": "lg",
  "cacheOptions": true,
  "captureMenuScroll": false,
  "cascadingSelect": true,
  "classNamePrefix": "jurisdiction",
  "closeMenuOnScroll": false,
  "closeMenuOnSelect": false,
  "components": Object {},
  "controlShouldRenderValue": true,
  "defaultOptions": true,
  "escapeClearsValue": false,
  "filterOption": null,
  "formatGroupLabel": [Function],
  "getOptionLabel": [Function],
  "getOptionValue": [Function],
  "inputValue": "",
  "isClearable": true,
  "isDisabled": false,
  "isLoading": true,
  "isMulti": false,
  "isOptionDisabled": [Function],
  "isRtl": false,
  "isSearchable": true,
  "loadingMessage": [Function],
  "maxMenuHeight": 300,
  "menuIsOpen": false,
  "menuPlacement": "bottom",
  "menuPosition": "absolute",
  "menuShouldBlockScroll": false,
  "menuShouldScrollIntoView": true,
  "minMenuHeight": 140,
  "name": "jurisdiction",
  "noOptionsMessage": [Function],
  "onChange": [Function],
  "onInputChange": [Function],
  "onMenuClose": [Function],
  "onMenuOpen": [Function],
  "openMenuOnClick": true,
  "openMenuOnFocus": false,
  "options": Array [],
  "pageSize": 5,
  "params": Object {
    "is_jurisdiction": true,
    "return_geometry": false,
  },
  "placeholder": "Select",
  "screenReaderStatus": [Function],
  "serviceClass": [Function],
  "styles": Object {},
  "tabIndex": "0",
  "tabSelectsValue": true,
  "value": null,
}
`;

exports[`components/forms/JurisdictionSelect renders select options correctly: Jurisdiction Select Props ownProps 1`] = `
Object {
  "apiEndpoint": "location/findByProperties",
  "aria-label": "Select",
  "bsSize": "lg",
  "cacheOptions": true,
  "cascadingSelect": true,
  "classNamePrefix": "jurisdiction",
  "closeMenuOnSelect": false,
  "defaultMenuIsOpen": false,
  "defaultOptions": true,
  "filterOption": null,
  "isClearable": true,
  "isLoading": false,
  "loadOptions": [Function],
  "name": "jurisdiction",
  "onChange": [Function],
  "params": Object {
    "is_jurisdiction": true,
    "return_geometry": false,
  },
  "placeholder": "Select",
  "serviceClass": [Function],
}
`;
